--- a/app/views/cube/show.html.erb
+++ b/app/views/cube/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Cube#show</h1>
-<p>Find me in app/views/cube/show.html.erb</p>
+<h2>Your solution has <%= @steps %> steps</h2>
+<p>You did not expect a faster one, do you?</p>
+<div class="cube_display" style="width: 30%; padding-left:35%">
+  <div class="roofpig" style="border-style: none" data-config="<%= @cube_params %>">
+  </div>
+</div>
+<br/>
+<br/>
+<br/>
+<label>Solution:
+  <%= link_to 'Movements Notation', 'https://ruwix.com/the-rubiks-cube/notation/', target: '_blank' %>
+</label>
+<div style="max-width: 30%; padding-left:35%; font-size: 12px; font-family: Courier; text-align: justify">
+  <%= @solution %>
+</div>
+<p>
+  <%= link_to 'Solve a new one', cube_setup_path %>
+</p>
+
