Working only with cubejs, the rails gem did not work with random cubes

--- a/app/views/cube/setup.html.erb
+++ b/app/views/cube/setup.html.erb
@@ -1,58 +1,77 @@
-<%= form_tag cube_solve_path do %>
-  <p>
+ <p>
     <label>
       Inform here the initial state for yor cube:
       Instructions Below!
     </label>
   </p>
   <p>
-    <%= text_area_tag :initial_state, @example, cols: 20, rows: 8, style: 'font-family: Courier; text-align: center; text-transform: uppercase;'%>
+    <%= text_area_tag :initial_state, @initial_state, cols: 20, rows: 8, style: 'font-family: monospace; text-align: center; text-transform: uppercase;'%>
+  </p>
+
+  <p>
+   <%= button_tag 'Scramble!', id: 'btn_scramble' %>
   </p>
   <p>
-    <%= submit_tag 'Solve'%>
+    <%= button_tag 'Solve using CUBJES', id: 'btn_solve' %>
+  </p>
+<%= form_tag cube_show_path, method: :get do %>
+  <p>
+    <label>
+      solutions movements:
+    </label>
+  </p>
+  <p>
+    <%= text_area_tag :solution, @solution, cols: 40, rows: 5, style: 'font-family: Courier; text-align: center; text-transform: uppercase;'%>
+  </p>
+  <p>
+    <%= submit_tag 'Show'%>
   </p>
 <% end %>
-<h4>Instructions</h4>
-<pre>
 
-G = Green       L = Left
+<h4>Instructions and Notation</h4>
+<div style="width:50%; padding-left:38%;">
+<pre style="text-align:left">
+Sources: <%= link_to 'Ruwik','https://ruwix.com', target: '_blank' %> <%= link_to 'CUBEJS','https://www.npmjs.com/package/cubejs', target: '_blank' %>
+
+Use this sequence of faces or colors to define the cube:
+(the center piece define the color og the face)
+
 Y = Yeloow      U = Up
-B = Blue        F = Front
+G = Green       R = Right
+R = Red         F = Front
 W = White       D = Down
-R = Red         R = Right
+B = Blue        L = Left
 O = Orange      B = Back
 
-L1 L2 L3 L4 L5 L6 L7 L8 L9
 U1 U2 U3 U4 U5 U6 U7 U8 U9
+R1 R2 R3 R4 R5 R6 R7 R8 R9
 F1 F2 F3 F4 F5 F6 F7 F8 F9
 D1 D2 D3 D4 D5 D6 D7 D8 D9
-R1 R2 R3 R4 R5 R6 R7 R8 R9
+L1 L2 L3 L4 L5 L6 L7 L8 L9
 B1 B2 B3 B4 B5 B6 B7 B8 B9
 
-                                Face 1
-                          |-----|-----|-----|
-                          |  U1 |  U2 |  U3 |
-                          |-----|-----|-----|
-                          |  U4 |  U5 |  U6 |
-                          |-----|-----|-----|
-                          |  U7 |  U8 |  U9 |
-                          |-----|-----|-----|
+             +------------+
+             | U1  U2  U3 |
+             |            |
+             | U4  U5  U6 |
+             |            |
+             | U7  U8  U9 |
++------------+------------+------------+------------+
+| L1  L2  L3 | F1  F2  F3 | R1  R2  R3 | B1  B2  B3 |
+|            |            |            |            |
+| L4  L5  L6 | F4  F5  F6 | R4  R5  R6 | B4  B5  B6 |
+|            |            |            |            |
+| L7  L8  L9 | F7  F8  F9 | R7  R8  R9 | B7  B8  B9 |
++------------+------------+------------+------------+
+             | D1  D2  D3 |
+             |            |
+             | D4  D5  D6 |
+             |            |
+             | D7  D8  D9 |
+             +------------+
 
-          Face 0                Face 2                 Face 4                 Face 5
-    |-----|-----|-----|   |-----|-----|-----|   |-----|-----|-----|   |-----|-----|-----|
-    |  L1 |  L2 |  L3 |   |  F1 |  F2 |  F3 |   |  R1 |  R2 |  R3 |   |  B1 |  B2 |  B3 |
-    |-----|-----|-----|   |-----|-----|-----|   |-----|-----|-----|   |-----|-----|-----|
-    |  L4 |  L5 |  L6 |   |  F4 |  F5 |  F6 |   |  R4 |  R5 |  R6 |   |  B4 |  B5 |  B6 |
-    |-----|-----|-----|   |-----|-----|-----|   |-----|-----|-----|   |-----|-----|-----|
-    |  L7 |  L8 |  L9 |   |  F7 |  F8 |  F9 |   |  R7 |  R8 |  R9 |   |  B7 |  B8 |  B9 |
-    |-----|-----|-----|   |-----|-----|-----|   |-----|-----|-----|   |-----|-----|-----|
-
-                                Face 3
-                          |-----|-----|-----|
-                          |  D1 |  D2 |  D3 |
-                          |-----|-----|-----|
-                          |  D4 |  D5 |  D6 |
-                          |-----|-----|-----|
-                          |  D7 |  D8 |  D9 |
-                          |-----|-----|-----|
+Color of the Faces
+R - green, L - blue, F - red,
+B - orange, U - yellow, and D - white
 </pre>
+</div>
