--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,10 @@
   </head>
 
   <body>
+    <h2 style="vertical-align: center">
+      <%= image_tag 'rubik-cube.svg', height: '60px' %>
+      Cube Solver
+    </h2>
     <%= yield %>
   </body>
 </html>
