adding rspec and Capybara for front end testing

--- a/app/views/cube/solve.html.erb
+++ b/app/views/cube/solve.html.erb
@@ -24,8 +24,7 @@
     <%= text_area_tag :solution, @solution, cols: 40, rows: 5, style: 'font-family: Courier; text-align: center; text-transform: uppercase;'%>
   </p>
   <p>
-    <%= submit_tag 'Show'%>
-  </p>
+    <%= submit_tag 'Show', id: 'btn_show' %>
 <% end %>
 
 <h4 id='intructions'>Instructions and Notation</h4>
