--- a/app/assets/stylesheets/cube.scss
+++ b/app/assets/stylesheets/cube.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the cube controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+/*Roofpig BEGIN*/
+.roofpig:before,.roofpig:after{content:" ";display:table}
+.roofpig:after{clear:both}
+.roofpig{border:none !important;margin:5px auto 25px;max-width:500px;color:#000;font-weight:bold;font-size:1.1em}
+.roofpig.inlineblock{margin:5px 20px 25px;vertical-align:top}
+.roofpig > div{height:auto !important;border:none !important;margin-top:5px}
+.roofpig-algtext{background-color:transparent;height:auto !important;font-size:15px !important;line-height:19px;font-weight:bold;text-align:left;margin-bottom:7px}
+.roofpig-past-algtext{background-color:#a9cef5;border-radius:5px}
+.roofpig-button{border-radius:5px;border:none;font-weight:bold;line-height:22px;height:27px !important;margin-right:6px;text-indent:-117px;font-size:10px !important;overflow:hidden;width:34px !important}
+.width150 .roofpig-button{width:30px !important}
+.roofpig-count{font-weight:bold;color:#2e649e;width:auto;margin-left:2px;display:inline-block}
+.width100{width:100px}
+.width150{width:150px}
+.width200{width:200px}
+.width250{max-width:250px}
+.width300{max-width:300px}
+.width350{max-width:350px}
+.width400{max-width:400px}
+.width450{max-width:450px}
+.width500{max-width:500px}
+.widget-container{margin:0 0 30px}
+#rightSidebarContent{padding:30px}
+#play-1{animation:firstPlayButtonBlinking 5s infinite}
+@keyframes firstPlayButtonBlinking{0%{background-color:#4287d2; }
+  70%{background-color:#4287d2; }
+  80%{background-color:#EEEEEE; }
+  90%{background-color:#f5111b; }
+  100%{background-color:#4287d2; }
+}
+.roofpig-help-button{display:none}
+/*Roofpig END*/
