--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <style>
-        body { font-family: Arial;
-            text-align: center; }
-    </style>
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <%= javascript_include_tag "roofpig_and_three.min", 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="cube_app">
     <h2 style="vertical-align: center">
       <%= image_tag 'rubik-cube.svg', height: '60px' %>
       Cube Solver
